# basics-of-artificial-intelligence

./: pyproject.toml
lab1/: lab_1.html  lab_1.ipynb
